Bug 181070 - ksysguard graph labels are broken
Summary: ksysguard graph labels are broken
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-17 15:11 UTC by Grzegorz Kossakowski
Modified: 2009-02-07 11:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A screenshot of ksysguard that shows a problem with labels (77.60 KB, image/png)
2009-01-17 15:13 UTC, Grzegorz Kossakowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Grzegorz Kossakowski 2009-01-17 15:11:23 UTC
Version:           4 (using 4.1.96 (KDE 4.1.96 (KDE 4.2 RC1)) "release 77.2", KDE:KDE4:Factory:Desktop / openSUSE_11.1)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27.7-9-pae

Labels for graphs in ksysguard are misplaced in KDE 4.2 RC1.

I'll attach a screenshot that shows the problem. It's a regression because I remember these graphs looking much better in a not so distant past.
Comment 1 Grzegorz Kossakowski 2009-01-17 15:13:04 UTC
Created attachment 30346 [details]
A screenshot of ksysguard that shows a problem with labels
Comment 2 Leo Spalteholz 2009-02-02 23:06:39 UTC
Same problem with english language interface.  The most pressing issue is the white y-axis labels as they are very hard to read.  Then there are things like too much space to the left of the y-axis labels, and overlapping legend at the bottom.
Comment 3 John Tapsell 2009-02-07 11:30:38 UTC
SVN commit 922582 by johnflux:

Add a crude versioning system so that we don't restore the old graph settings for the new 
graph widget

BUG:181070
BUG:182850


 M  +1 -1      CMakeLists.txt  
 M  +24 -24    SensorDisplayLib/FancyPlotter.cc  
 D             SystemLoad.sgrd  
 AM            SystemLoad2.sgrd   SystemLoad.sgrd#911529
 M  +6 -1      Workspace.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=922582