Add a crude versioning system so that we don't restore the old graph settings for the new graph widget

BUG:181070
BUG:182850

svn path=/trunk/KDE/kdebase/workspace/; revision=922582